# ModeratedCooperatingExperts

./: .gitignore  PLAN.md  README.md  REPORT.md  pyproject.toml
configs/: models.yaml
moce/: __init__.py  assembler.py  cli.py  dag.py  experts.py  model_manager.py  moderator.py  orchestrator.py  schema.py
tests/: test_experts.py  test_moderator.py  test_orchestrator.py  test_schema.py
